# password_manager

./: .env.sample  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: djnago.yml
config/: urls.py
config/settings/: common.py  dev.py  prod.py
core/: admin.py  models.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py
nginx/: nginx.conf
password/: admin.py  models.py  urls.py  views.py
password/migrations/: 0001_initial.py
static/js/: main.js
templates/: base.html  login.html
templates/core/: profile_update.html
templates/password/: password_create.html  password_delete.html  password_detail.html  password_list.html  password_update.html
